--- a/My Demo App/Storyboards/TabBar.storyboard
+++ b/My Demo App/Storyboards/TabBar.storyboard
@@ -842,7 +842,7 @@
                                                                         <constraints>
                                                                             <constraint firstAttribute="width" constant="24" id="IYr-J4-d0t"/>
                                                                         </constraints>
-                                                                        <state key="normal" image="GreenColorUnselected Icons"/>
+                                                                        <state key="normal" image="GreenColorUnSelected Icons"/>
                                                                         <state key="selected" image="GreenColorSelected Icons"/>
                                                                         <connections>
                                                                             <action selector="greenButton:" destination="BLp-WG-JHm" eventType="touchUpInside" id="UEa-66-9ln"/>
@@ -4986,7 +4986,7 @@ Fits in comfortably a laptop up to 15 inch. Never leave a thing behind and forge
         <image name="AppLogo Icons" width="39" height="39"/>
         <image name="AppTitle Icons" width="121" height="13.5"/>
         <image name="BackButton Icons" width="14" height="12"/>
-        <image name="BagBlack Image" width="164" height="168"/>
+        <image name="BagBlack Image" width="164" height="164"/>
         <image name="BlackColorSelected Icons" width="32" height="31"/>
         <image name="BlackColorUnSelected Icons" width="24" height="24"/>
         <image name="BlueColorSelected Icons" width="32" height="31"/>
@@ -5002,7 +5002,7 @@ Fits in comfortably a laptop up to 15 inch. Never leave a thing behind and forge
         <image name="GrayRoundView Icons" width="18" height="18"/>
         <image name="GreenButton Icons" width="342" height="48"/>
         <image name="GreenColorSelected Icons" width="32" height="31"/>
-        <image name="GreenColorUnselected Icons" width="24" height="24"/>
+        <image name="GreenColorUnSelected Icons" width="24" height="24"/>
         <image name="GreenRoundView Icons" width="18" height="18"/>
         <image name="Linkedin Icons" width="20" height="20"/>
         <image name="Menu Icons" width="20" height="20"/>
