--- a/My Demo App/Storyboards/TabBar.storyboard
+++ b/My Demo App/Storyboards/TabBar.storyboard
@@ -1387,19 +1387,20 @@ Fits in comfortably a laptop up to 15 inch. Never leave a thing behind and forge
                                                                     <subviews>
                                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BagBlack Image" translatesAutoresizingMaskIntoConstraints="NO" id="AWq-cs-K6k">
                                                                             <rect key="frame" x="0.0" y="0.0" width="190" height="190"/>
-                                                                            <accessibility key="accessibilityConfiguration" identifier="product-image" label="product-image"/>
+                                                                            <accessibility key="accessibilityConfiguration" identifier="Product Image" label="Product Image"/>
                                                                             <constraints>
                                                                                 <constraint firstAttribute="width" secondItem="AWq-cs-K6k" secondAttribute="height" multiplier="1:1" id="FUe-fK-QJ7"/>
                                                                             </constraints>
                                                                         </imageView>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sauce Labs Backpack" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G8Q-qt-MvR">
                                                                             <rect key="frame" x="2" y="194" width="134" height="14"/>
+                                                                            <accessibility key="accessibilityConfiguration" identifier="Product Name" label="Product Name"/>
                                                                             <fontDescription key="fontDescription" name="ProximaNova-Regular" family="Proxima Nova" pointSize="14"/>
                                                                             <nil key="textColor"/>
                                                                         </label>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$65.97" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rdk-nA-gud">
                                                                             <rect key="frame" x="2" y="220" width="57" height="18"/>
-                                                                            <accessibility key="accessibilityConfiguration" identifier="price" label="price"/>
+                                                                            <accessibility key="accessibilityConfiguration" identifier="Product Price" label="Product Price"/>
                                                                             <fontDescription key="fontDescription" name="ProximaNova-Medium" family="Proxima Nova" pointSize="18"/>
                                                                             <nil key="textColor"/>
                                                                         </label>
